--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,9 +8,7 @@
         <div class="row">
 
             <!-- Grid column -->
-            <div class="col-md-12 py-5">
-                Footer looks Good!
-            </div>
+            <div text-align="center center" flex="500">Music is a therapy</div>
             <!-- Grid column -->
 
         </div>
@@ -20,8 +18,8 @@
     <!-- Footer Elements -->
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-        <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    <div class="footer-copyright text-center py-3">© 2021 Copyright:
+        <a href="#"> Sarjib Amanuel Muna</a>
     </div>
     <!-- Copyright -->
 
