--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
     <!-- <div class="navbar-brand"> -->
     <a class="navbar-brand">
 
-        <img class="image-header" src="../../../assets/img/logo.png">
+        <img alt="Avatar" class="image-header" src="../../../assets/img/logo.png">
     </a>
 
     <!-- </div> -->
