--- a/src/app/components/artist-dashboard/artist-dashboard.component.html
+++ b/src/app/components/artist-dashboard/artist-dashboard.component.html
@@ -1,1 +1,11 @@
-<p>artist-dashboard works!</p>
+<div width="100%" class="container">
+    <div class="demo-button-container">
+        <button mat-raised-button (click)="loadMyMusics()" class="demo-button">
+            My Music List
+        </button>
+        <button mat-raised-button (click)="uploadNewMusic()" class="demo-button">
+            Upload New Song
+        </button>
+    </div>
+    <router-outlet></router-outlet>
+</div>
