--- a/src/app/components/user-dashboard/user-dashboard.component.html
+++ b/src/app/components/user-dashboard/user-dashboard.component.html
@@ -1,1 +1,9 @@
-<p>user-dashboard works!</p>
+<div class="demo-button-container">
+    <button mat-raised-button (click)="loadMusics()" class="demo-button">
+        Music List
+    </button>
+    <button mat-raised-button (click)="loadArtists()" class="demo-button">
+        Artist List
+    </button>
+</div>
+<router-outlet></router-outlet>
